--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ body {
 
 .skillsSection,
 .contactSection {
-	background-color: #e74c3c;
+	background-color: #0e1ee2;
 	color: #fff;
 }
 
@@ -189,7 +189,7 @@ body {
 }
 
 .filter .current {
-	background-color: #e74c3c;;
+	background-color: #0e1ee2;;
 	border-color: #0e1ee2;
 	color: #fff;
 }
@@ -250,7 +250,7 @@ body {
 .items a {
 	width: 40px;
     height: 40px;
-    background-color: #e74c3c;
+    background-color: #0e1ee2;
     position: relative;
     display: inline-block;
 
